# my-postman-2026

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
public/: electron.js  preload.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: RequestPanel.tsx  ResponsePanel.tsx  Sidebar.tsx
src/types/: global.d.ts  index.ts
