[package]
name = "my-postman-2026"
version = "1.0.0"
description = "A desktop HTTP client tool similar to Postman"
authors = ["you"]
license = ""
repository = ""
default-run = "my-postman-2026"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "api-all", "http-all"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]